  * GlassDelta() calculates another commonly used effectsize measure.
  * ToBaseR() helps to go back to the roots and converts tibbles to data.frames.
  * RaterFrame() helps to build a wide data.frame of multiple raters based 
    on a formula.
  * IsConfusionTable() checks if a matrix looks like a coincidence matrix.
  * PlotCIBand() is helpful for a lines plot containing confidence bands.
  

UPDATED FUNCTIONS:
  * XLView() uses write_xlsx instead write.table allowing better support
    for non ASCII characters.
  * CutAge() gains a new argument full, allowing to remove empty
    levels at the edges of the distribution. 
    The arguments have also been changed: "from", "to", "by" have 
    been replaced by "breaks". A new argument "labels" allow to define 
    better suited labels for age specific levels.
  * LeveneTest() has been given the same interface as similar functions in 
    base R (as ansari.test or kruskal.test). lm-interface has been defunct.
  * Format() looses the two predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%". These turned out to not be flexible enough.
  * Agree has been fundamentally rewritten to act more robust. It also got 
    a much more sophisticated interface for different data structures.
  * CutGen() has been renamed to Generation().  
  * Recode() gets two new arguments, "keep" to define levels that should
    remain unchanged and "ref" to set the new reference level.
  

    
BUGFIXES:
  * DoBy() ignored provided names for the new created variables. 
  * Corrected several typos in names (Quesenberry, Jeffreys). 
    (Credit to musvaage in https://github.com/AndriSignorell/DescTools/pull/169)
  * ICC() no longer fails when "type" argument is set to anything other 
    than "all". (Credit to Alphonse Kwizera)
  * PercentRank() now subtracts 1 in nominator and denominator ensuring
    the scale runs from 0 to 1.  
  * ToLong() does not try to replace non existing rownames anymore. 