@@ -1,8 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.60.27
-Date: 2025-11-05
+Version: 0.99.60.28
+Date: 2025-12-12
 Authors@R: c(
   person(given="Andri", family="Signorell", 
          email = "andri@signorell.net", 
