@@ -88,7 +88,7 @@ export(
 "mgamma","mlnorm","mbeta","mchisq","mt","mf", "StringsAsFactors",
 "FmCI", "Fm", "Style","Styles",
 "PABAK", "GwetAC1", "RandolphKappa","PlotCIBand",
-"RaterFrame","NormalizeToConfusion","IsConfusionTable"
+"RaterFrame","NormalizeToConfusion","IsConfusionTable","NAVal"
 )
 
 
