@@ -73,6 +73,7 @@ reference:
     - RoundTo
     - Winsorize
     - ZeroIfNA # - NAIfZero # - Impute
+    - NAVal # - NAIfZero # - Impute
     - NZ
 
     # Transform: numeric to factor
