@@ -17,6 +17,8 @@ NEW FUNCTIONS ADDED:
     on a formula.
   * IsConfusionTable() checks if a matrix looks like a coincidence matrix.
   * PlotCIBand() is helpful for a lines plot containing confidence bands.
+  * NAVal() replaces NAs by a specified value, similar to the NVL() 
+    function in SQL. 
   
 
 UPDATED FUNCTIONS:
